Fixed bug with Overworld Rune not applying certain bonuses properly